# tdcompil

./: .gitignore
TD1/: Makefile  calc.c  calc.h  calclex.c  calclex.l  catlex.c  catlex.l  input1.c  input2.c  input3.c  input3_nonterm.c  lexup.l  nombres.l  nombres_v1.l  nombres_v2.l  nombres_v3.l  strup_v1.l  strup_v2.l  supcom_v1.l  supcom_v2.l  supcom_v3.l  wc.l
TD1/calc/: calclex.c
TD2/: CR.txt  Makefile  analyseur.c  calculatrice.h  calculatrice.l  input.txt
TD3/: CR.txt
TD4/: Makefile  lexer.l  syntax.y  xml.y  y.tab.h
TD5/: .gitignore  Makefile  code2.c  code3.c  lexical.l  syntax.y
TD5/Resources/: fact.as  fact.dot  fact.in  fibo.c  fibo.dot  ifwhile.as  ifwhile.in  puiss.as  puiss.dot  read.as  read.dot  read.in
TD5_extended/: .gitignore  CMakeLists.txt  Makefile  README.md  calc.c  calc.h  code.h  code1.c  code2.c  code3.c  fact.am  lexical.c  lexical.l  prelude.td5  syntax.tab.c  syntax.y  test_all.sh  turing.c  turing.h  turing_analysis.c  turing_dis.c  turing_emit.c
TD5_extended/Resources/: calc_rpn.am  calc_rpn.in  calc_rpn.td5  calc_rpn_dyn.am  calc_rpn_dyn.td5  fact.am  fact.in  fact.td5  fibo.am  fibo.in  fibo_functional.am  fibo_functional.td5  fibo_iter.am  fibo_iter.in  fibo_iter.td5  fibo_opt.am  fibo_opt.c  fibo_ptrs.am  fibo_ptrs.in  fibo_ptrs.td5  fibo_rec.am  fibo_rec.td5  forward.am  forward.td5  func.am  func.in  func.td5  ifwhile.am  ifwhile.dot  ifwhile.td5  interp  linked_list.am  linked_list.in  linked_list.td5  lisp.td5  loop_break.am  loop_break.td5  nested_consts.am  nested_consts.td5  pattern_struct.am  (+22 more)
TD5_extended/td5_textmate/: package.json
TD5_extended/td5_textmate/syntaxes/: td5.tmLanguage.json
TD7/: .gitignore  Makefile
TD7/doc/: Makefile
TD7/lib/: README.md  hash.c
TD7/runtime/: toy-runtime.c  toy-runtime.h
TD7/src/: Makefile  analysis.c  analysis.h  ast.c  ast.h  lexical.l  main.c  prodcode.c  prodcode.h  symbols.c  syntax.y  toy.h  utils.c  utils.h
TD7/tests/: IGNORE  Makefile  README.md  exec-fail  exec-success  fail-bool.toy  fail-power.toy  (+32 more)
TD7_rendu/: .gitignore  CR.txt  README.md
TD_exam/: .gitignore
(+95 files in other folders)
