cmake_minimum_required(VERSION 3.16)
project(TD5_extended C)

FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(FLEX REQUIRED)

set(CMAKE_C_STANDARD 11)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${CMAKE_BINARY_DIR})
flex_target(lexical lexical.l ${CMAKE_BINARY_DIR}/lexical.c)
bison_target(parser syntax.y syntax.c COMPILE_FLAGS -t)
ADD_FLEX_BISON_DEPENDENCY(lexical parser)
set(COMMON_OBJ ${BISON_parser_OUTPUTS} ${FLEX_lexical_OUTPUTS} calc.c)
add_executable(calc3 ${COMMON_OBJ} code3.c)
add_executable(turing ${COMMON_OBJ} turing.c turing_emit.c turing.h turing_analysis.c turing_dis.c)
